<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>de.MCmoderSD</groupId>
    <artifactId>jal</artifactId>
    <version>1.0.6</version>

    <name>Java Audio Library</name>
    <description>A simple Java audio library</description>

    <distributionManagement>
        <repository>
            <id>JavaAudioLibrary</id>
            <name>GitHub MCmoderSD Apache Maven Packages</name>
            <url>https://maven.pkg.github.com/MCmoderSD/JavaAudioLibrary</url>
        </repository>
    </distributionManagement>

    <properties>
        <gpg.skip>true</gpg.skip>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <repositories>
        <repository>
            <id>JavaAudioLibrary</id>
            <url>https://maven.pkg.github.com/MCmoderSD/JavaAudioLibrary</url>
        </repository>
    </repositories>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.3.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>